kubernetes/apps/kube-system/cilium/policies/ingress/labelled-allow-ingress-internal-ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-internal-ingress
spec:
  endpointSelector:
    matchLabels:
      ingress.samoth.eu/internal-ingress: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: routing
            app.kubernetes.io/instance: traefik-internal-routing
            app.kubernetes.io/name: traefik
    # TODO est-ce que ça sert vraiment ?
    - fromCIDRSet:
      - cidrGroupRef: group-lan
