kubernetes/apps/kube-system/cilium/policies/ingress/labelled-allow-ingress-internet.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-internet
spec:
  endpointSelector:
    matchLabels:
      ingress.samoth.eu/internet: allow
  ingress:
    - fromCIDRSet:
        - cidr: "0.0.0.0/0"
          # list extracted from https://en.wikipedia.org/wiki/IPv4#Special-use_addresses
          except:
            - "0.0.0.0/8"
            - "10.0.0.0/8"
            - "100.64.0.0/10"
            - "127.0.0.0/8"
            - "169.254.0.0/16"
            - "172.16.0.0/12"
            - "192.0.0.0/24"
            - "192.0.2.0/24"
            - "192.88.99.0/24"
            - "192.168.0.0/16"
            - "198.18.0.0/15"
            - "198.51.100.0/24"
            - "203.0.113.0/24"
            - "224.0.0.0/4"
            - "233.252.0.0/24"
            - "240.0.0.0/4"
            - "255.255.255.255/32"
