kubernetes/apps/kube-system/cilium/policies/ingress/labelled-allow-ingress-kube-apiserver.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      ingress.samoth.eu/kube-apiserver: allow
  ingress:
    - fromEntities:
      - kube-apiserver
