kubernetes/apps/kube-system/cilium/policies/ingress/labelled-allow-ingress-lan.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-lan
spec:
  endpointSelector:
    matchLabels:
      ingress.samoth.eu/lan: allow
  ingress:
    - fromCIDRSet:
        - cidr: "192.168.0.0/24"
