kubernetes/apps/kube-system/cilium/policies/ingress/labelled-allow-ingress-prometheus.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-prometheus
spec:
  endpointSelector:
    matchLabels:
      ingress.samoth.eu/prometheus: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/instance: kube-prometheus-stack
            app.kubernetes.io/name: prometheus
