kubernetes/apps/kube-system/cilium/policies/ingress/labelled-deny-ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-deny-ingress
spec:
  endpointSelector:
    matchLabels:
      ingress.samoth.eu: deny
  ingress:
    - {}
